--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,5 @@
+#Shows the contributors of the project
+
 Sole Author of the project - Jeremiah Martey
 
 I am currently actively working on aproject partner
