--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
-#Shows the contributors of the project
-
-Authors of the project - Jeremiah Martey & Barigbue Nbira
+#This file lists all contributors to this repository.
+Jeremiah Martey <Jeremiah.martey@outlook.com>
+Barigbue Nbira <barigbuenbira@gmail.com>
