--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
-#This file lists all contributors to this repository.
+# File lists all contributors to this repository.
 Jeremiah Martey <Jeremiah.martey@outlook.com>
 Barigbue Nbira <barigbuenbira@gmail.com>
